--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,5 +35,14 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      env:
+        # set environment variable to use during testing
+        # ... using the repository secret value set securely via repo settings
+        ALPHAVANTAGE_API_KEY: ${{ secrets.ALPHAVANTAGE_API_KEY }}
+        MAILGUN_API_KEY: ${{ secrets.MAILGUN_API_KEY }}
+        MAILGUN_SENDER_ADDRESS: ${{ secrets.MAILGUN_SENDER_ADDRESS }}
+        MAILGUN_DOMAIN: ${{ secrets.MAILGUN_DOMAIN }}
+        FLASK_APP: ${{ secrets.FLASK_APP }}
+        MOVIE_API_KEY: ${{ secrets.MOVIE_API_KEY }}
       run: |
         pytest
