--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,5 +42,7 @@ jobs:
         MAILGUN_API_KEY: ${{ secrets.MAILGUN_API_KEY }}
         MAILGUN_SENDER_ADDRESS: ${{ secrets.MAILGUN_SENDER_ADDRESS }}
         MAILGUN_DOMAIN: ${{ secrets.MAILGUN_DOMAIN }}
+        FLASK_APP: ${{ secrets.FLASK_APP }}
+        MOVIE_API_KEY: ${{ secrets.MOVIE_API_KEY }}
       run: |
         pytest
